@@ -10,6 +10,7 @@
 
     <modules>
         <module>error</module>
+        <module>error-test</module>
         <module>lexer</module>
         <module>grammar</module>
         <module>parser</module>
@@ -113,7 +114,6 @@
                     <configuration>
                         <!--https://stackoverflow.com/questions/50334742/how-to-get-junit5-with-jdk10-jigsaw-and-maven3-to-work-->
                         <argLine>
-                            --add-opens be.guldentops.geert.lox.error/be.guldentops.geert.lox.error=ALL-UNNAMED
                             --add-opens be.guldentops.geert.lox.lexer/be.guldentops.geert.lox.lexer=ALL-UNNAMED
                         </argLine>
                     </configuration>
